--- a/plumo-webserver/src/main/resources/org/glavo/plumo/webserver/internal/default-mimetypes.properties
+++ b/plumo-webserver/src/main/resources/org/glavo/plumo/webserver/internal/default-mimetypes.properties
@@ -1,3 +1,6 @@
+# Binary Files
+application/octet-stream=exe,dll,so,obj,dump,arc
+
 # Text Files
 text/plain=txt,text,sh,bash,csh,fish,zsh,bat,c,cc,cpp,c++,go,gradle,groovy,h,h++,hpp,kt,kts,properties
 text/css=css
