Add japp to mime types

--- a/webserver/src/main/resources/org/glavo/plumo/webserver/internal/default-mimetypes.properties
+++ b/webserver/src/main/resources/org/glavo/plumo/webserver/internal/default-mimetypes.properties
@@ -1,5 +1,5 @@
 # Binary Files
-application/octet-stream=exe,dll,so,obj,dump,arc
+application/octet-stream=exe,dll,so,obj,dump,arc,japp
 
 # Text Files
 text/plain=txt,text,sh,bash,csh,fish,zsh,bat,c,cc,cpp,c++,go,gradle,groovy,h,h++,hpp,kt,kts,properties
